--- a/app/src/main/res/layout/about_page.xml
+++ b/app/src/main/res/layout/about_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/appbg">
 
@@ -8,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Help"
+        android:text="About"
         android:id="@+id/textView5"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
@@ -20,21 +21,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="How to play:"
+        android:text="Created By"
         android:id="@+id/textView6"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="10dp"
         android:textSize="25dp"
-        android:textColor="#1ab257" />
+        android:textColor="#1ab257"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Try to fill three contiguous boxes with your simbole(i.e. &apos;X&apos; or &apos;O&apos;). And also try to stop your opponent to do the same."
+        android:text="Premang Vikani"
         android:id="@+id/textView7"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:textColor="#a11bd6"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Version"
+        android:id="@+id/textView8"
+        android:layout_marginTop="30dp"
+        android:textSize="25dp"
+        android:textColor="#1ab257"
+        android:layout_gravity="center_horizontal"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="28.1.2015"
+        android:id="@+id/textView9"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:textColor="#a11bd6" />
+
 </LinearLayout>
