--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/welcome_page"></include>
+    <include layout="@layout/welcome_page" />
 
 </android.support.design.widget.CoordinatorLayout>
