--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -1,71 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/appbg">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/subLayout"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp">
 
-        <RelativeLayout
-            android:layout_width="210dp"
-            android:layout_height="140dp"
-            android:layout_alignParentTop="false"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tic"
+            android:id="@+id/textView2"
+            android:layout_alignParentStart="true"
+            android:textSize="40sp"
+            android:textColor="#2bb81c" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tac"
+            android:id="@+id/textView"
+            android:layout_below="@+id/textView2"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp">
+            android:textSize="40sp"
+            android:textColor="#1a4dbb" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Tac"
-                android:id="@+id/textView"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:textSize="40dp"
-                android:textColor="#1a4dbb" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Toe"
+            android:id="@+id/textView3"
+            android:layout_below="@+id/textView"
+            android:layout_alignParentEnd="true"
+            android:textSize="40sp"
+            android:textColor="#FF2DB8AC" />
+    </RelativeLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Tic"
-                android:id="@+id/textView2"
-                android:layout_above="@+id/textView"
-                android:layout_alignParentStart="true"
-                android:textSize="40dp"
-                android:textColor="#2bb81c" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcomeImage"
+        android:layout_below="@+id/subLayout"
+        android:layout_centerInParent="true"
+        android:src="@drawable/welcome" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Toe"
-                android:id="@+id/textView3"
-                android:layout_below="@+id/textView"
-                android:layout_alignParentEnd="true"
-                android:textSize="40dp"
-                android:textColor="#FF2DB8AC" />
-        </RelativeLayout>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp">
 
-        <ImageView
-            android:layout_width="280dp"
-            android:layout_height="300dp"
-            android:id="@+id/welcomeImage"
-            android:layout_alignParentBottom="false"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="175dp"
-            android:src="@drawable/welcome"/>
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar2"
+            android:layout_gravity="center" />
 
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:layout_alignParentBottom="false"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="475dp"/>
+            android:id="@+id/progressBar3"
+            android:layout_gravity="center" />
 
-    </RelativeLayout>
-</LinearLayout>
+        <ProgressBar
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar4"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+
+</RelativeLayout>
